feat: introduce new field Interval in pod watch spec

--- a/config/crd/bases/config.mgufrone.dev_clusterpodwatches.yaml
+++ b/config/crd/bases/config.mgufrone.dev_clusterpodwatches.yaml
@@ -40,10 +40,13 @@ spec:
             description: ClusterPodWatchSpec defines the desired state of ClusterPodWatch.
             properties:
               channel:
-                description: |-
-                  Foo is an example field of PodWatch. Edit podwatch_types.go to remove/update
-                  Status  []WatchStatus `json:"status"`
+                description: Channel is the Slack channel to send the notification
+                  to
                 type: string
+              interval:
+                description: Interval specifies the time (in seconds) between each
+                  reconcile operation performed by PodWatch.
+                type: integer
             required:
             - channel
             type: object
@@ -55,6 +58,8 @@ spec:
                   INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
                   Important: Run "make" to regenerate code after modifying this file
                 items:
+                  description: PodReport contain the ephemeral state of the failing
+                    pod and will be saved under PodWatch or ClusterPodWatch status.
                   properties:
                     lastStatus:
                       type: string
