--- a/.github/workflows/release-container.yaml
+++ b/.github/workflows/release-container.yaml
@@ -40,8 +40,7 @@ jobs:
           builder: default
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/my-container-image:latest
-            ghcr.io/${{ github.repository_owner }}/my-container-image:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ github.ref_name }}
 
       - name: Inspect Image
-        run: docker image inspect ghcr.io/${{ github.repository_owner }}/my-container-image:latest
+        run: docker image inspect ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ github.ref_name }}
