--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -43,11 +43,13 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          labels: |
+            org.opencontainers.image.source=${{ github.repositoryUrl }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
           file: ./Dockerfile
           builder: default
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ github.ref_name }}
-
-      - name: Inspect Image
-        run: docker image inspect ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ github.ref_name }}
+            ghcr.io/${{ github.repository_owner }}/pod-notifier:latest
