--- a/config/samples/config_v1alpha1_clusterpodwatch.yaml
+++ b/config/samples/config_v1alpha1_clusterpodwatch.yaml
@@ -6,4 +6,5 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: clusterpodwatch-sample
 spec:
+  channel: "#notifications"
   # TODO(user): Add fields here
