--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -4,12 +4,17 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - .chglog
+      - .github
+      - .gitignore
+      - "*.md"
+      - ".devcontainer"
 
 jobs:
   bump-version:
     name: Bump Version and Create Release Tag
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'bump version') # Trigger only if commit message contains 'bump version'
 
     steps:
       - name: Checkout Repository
