--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -93,6 +93,8 @@ jobs:
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.CR_PAT }}
         with:
           tag_name: ${{ env.next_version }}
           release_name: ${{ env.next_version }}
