--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -1,6 +1,10 @@
 name: Build and Push Docker Image
 
 on:
+  workflow_run:
+    workflows: [ "Bump Version and Update Release" ]
+    types:
+      - completed
   push:
     tags:
       - "*"
