--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -24,6 +24,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          fetch-tags: 'true'
+          fetch-depth: '1'
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
@@ -42,19 +45,23 @@ jobs:
           key: ${{ runner.os }}-docker-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-docker-
+      - name: Get latest tag
+        id: tag
+        run: |
+          TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          echo "TAG=$TAG" >> $GITHUB_ENV
 
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           labels: |
             org.opencontainers.image.source=${{ github.repositoryUrl }}
             org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
           file: ./Dockerfile
           builder: default
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ github.ref_name }}
+            ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}
             ghcr.io/${{ github.repository_owner }}/pod-notifier:latest
           platforms: linux/amd64,linux/arm64
