--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -15,9 +15,6 @@ jobs:
   test:
     uses: ./.github/workflows/test.yml
   build-and-push:
-    needs:
-      - lint
-      - test
     name: Build and Push Docker Image to GHCR
     runs-on: ubuntu-latest
 
@@ -37,6 +34,10 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver: 'docker-container'
+          install: 'true'
+          platforms: linux/amd64,linux/arm64
 
       - name: Cache Docker layers
         uses: actions/cache@v3
