--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -13,6 +13,9 @@ jobs:
   build-and-push:
     name: Build and Push Docker Image to GHCR
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: [ amd64, arm64 ]
 
     steps:
       - name: Checkout Code
@@ -30,10 +33,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          driver: 'docker-container'
-          install: 'true'
-          platforms: linux/amd64,linux/arm64
 
       - name: Cache Docker layers
         uses: actions/cache@v3
@@ -58,6 +57,29 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}
-            ghcr.io/${{ github.repository_owner }}/pod-notifier:latest
-          platforms: linux/amd64,linux/arm64
+            ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}-${{ matrix.arch }}
+            ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ matrix.arch }}
+          platforms: linux/${{ matrix.arch }}
+  manifest:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Create and push multi-arch manifest
+        run: |
+          docker manifest create ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }} \
+            --amend ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}-amd64 \
+            --amend ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}-arm64
+          
+          docker manifest push ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}
+      - name: Create and push multi-arch manifest for latest tag
+        run: |
+          docker manifest create ghcr.io/${{ github.repository_owner }}/pod-notifier:latest \
+            --amend ghcr.io/${{ github.repository_owner }}/pod-notifier:latest-amd64 \
+            --amend ghcr.io/${{ github.repository_owner }}/pod-notifier:latest-arm64
+          
+          docker manifest push ghcr.io/${{ github.repository_owner }}/pod-notifier:latest
