--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
           echo "TAG=$TAG" >> $GITHUB_ENV
+          echo "TAG=$TAG" >> $GITHUB_OUTPUT
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
@@ -64,6 +65,8 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
+      - name: Set TAG env
+        run: echo "TAG=${{ needs.build-and-push.outputs.tag }}" >> $GITHUB_ENV
       - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
