--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -69,16 +69,9 @@ jobs:
         run: echo "TAG=${{ needs.build-and-push.outputs.tag }}" >> $GITHUB_ENV
       - uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Create and push multi-arch manifest
-        run: |
-          docker manifest create ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }} \
-            --amend ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}-amd64 \
-            --amend ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}-arm64
-          
-          docker manifest push ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
       - name: Create and push multi-arch manifest for latest tag
         run: |
           docker manifest create ghcr.io/${{ github.repository_owner }}/pod-notifier:latest \
