--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build-and-push:
+    if: false
     name: Build and Push Docker Image to GHCR
     runs-on: ubuntu-latest
     strategy:
