--- a/.github/workflows/release-container.yml
+++ b/.github/workflows/release-container.yml
@@ -45,7 +45,12 @@ jobs:
         run: |
           TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
           echo "TAG=$TAG" >> $GITHUB_ENV
-
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/arm64,linux/amd64
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
@@ -54,7 +59,6 @@ jobs:
             org.opencontainers.image.source=${{ github.repositoryUrl }}
             org.opencontainers.image.revision=${{ github.sha }}
           file: ./Dockerfile
-          builder: default
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/pod-notifier:${{ env.TAG }}
